@@ -10,6 +10,7 @@
 
 package org.junit.jupiter.params;
 
+import static java.lang.annotation.RetentionPolicy.RUNTIME;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.within;
 import static org.junit.jupiter.api.Assertions.assertEquals;
@@ -40,7 +41,6 @@ import static org.junit.platform.testkit.engine.TestExecutionResultConditions.me
 
 import java.lang.annotation.ElementType;
 import java.lang.annotation.Retention;
-import java.lang.annotation.RetentionPolicy;
 import java.lang.annotation.Target;
 import java.util.ArrayList;
 import java.util.Arrays;
@@ -1093,9 +1093,10 @@ class ParameterizedTestIntegrationTests {
 	@Nested
 	class RepeatableSourcesIntegrationTests {
 
-		@Test
-		void executesWithRepeatableCsvFileSource() {
-			var results = execute("testWithRepeatableCsvFileSource", String.class, String.class);
+		@ParameterizedTest
+		@ValueSource(strings = { "testWithRepeatableCsvFileSource", "testWithRepeatableCsvFileSourceAsMetaAnnotation" })
+		void executesWithRepeatableCsvFileSource(String methodName) {
+			var results = execute(methodName, String.class, String.class);
 			results.allEvents().assertThatEvents() //
 					.haveExactly(1,
 						event(test(), displayName("[1] column1=foo, column2=1"), finishedWithFailure(message("foo 1")))) //
@@ -1103,17 +1104,19 @@ class ParameterizedTestIntegrationTests {
 						finishedWithFailure(message("apple 1"))));
 		}
 
-		@Test
-		void executesWithRepeatableCsvSource() {
-			var results = execute("testWithRepeatableCsvSource", String.class);
+		@ParameterizedTest
+		@ValueSource(strings = { "testWithRepeatableCsvSource", "testWithRepeatableCsvSourceAsMetaAnnotation" })
+		void executesWithRepeatableCsvSource(String methodName) {
+			var results = execute(methodName, String.class);
 			results.allEvents().assertThatEvents() //
 					.haveExactly(1, event(test(), displayName("[1] argument=a"), finishedWithFailure(message("a")))) //
 					.haveExactly(1, event(test(), displayName("[2] argument=b"), finishedWithFailure(message("b"))));
 		}
 
-		@Test
-		void executesWithRepeatableMethodSource() {
-			var results = execute("testWithRepeatableMethodSource", String.class);
+		@ParameterizedTest
+		@ValueSource(strings = { "testWithRepeatableMethodSource", "testWithRepeatableMethodSourceAsMetaAnnotation" })
+		void executesWithRepeatableMethodSource(String methodName) {
+			var results = execute(methodName, String.class);
 			results.allEvents().assertThatEvents() //
 					.haveExactly(1,
 						event(test(), displayName("[1] argument=some"), finishedWithFailure(message("some")))) //
@@ -1121,27 +1124,30 @@ class ParameterizedTestIntegrationTests {
 						event(test(), displayName("[2] argument=other"), finishedWithFailure(message("other"))));
 		}
 
-		@Test
-		void executesWithRepeatableEnumSource() {
-			var results = execute("testWithRepeatableEnumSource", Action.class);
+		@ParameterizedTest
+		@ValueSource(strings = { "testWithRepeatableEnumSource", "testWithRepeatableEnumSourceAsMetaAnnotation" })
+		void executesWithRepeatableEnumSource(String methodName) {
+			var results = execute(methodName, Action.class);
 			results.allEvents().assertThatEvents() //
 					.haveExactly(1, event(test(), displayName("[1] argument=FOO"), finishedWithFailure(message("FOO")))) //
 					.haveExactly(1,
 						event(test(), displayName("[2] argument=BAR"), finishedWithFailure(message("BAR"))));
 		}
 
-		@Test
-		void executesWithRepeatableValueSource() {
-			var results = execute("testWithRepeatableValueSource", String.class);
+		@ParameterizedTest
+		@ValueSource(strings = { "testWithRepeatableValueSource", "testWithRepeatableValueSourceAsMetaAnnotation" })
+		void executesWithRepeatableValueSource(String methodName) {
+			var results = execute(methodName, String.class);
 			results.allEvents().assertThatEvents() //
 					.haveExactly(1, event(test(), displayName("[1] argument=foo"), finishedWithFailure(message("foo")))) //
 					.haveExactly(1,
 						event(test(), displayName("[2] argument=bar"), finishedWithFailure(message("bar"))));
 		}
 
-		@Test
-		void executesWithRepeatableFieldSource() {
-			var results = execute("testWithRepeatableFieldSource", String.class);
+		@ParameterizedTest
+		@ValueSource(strings = { "testWithRepeatableFieldSource", "testWithRepeatableFieldSourceAsMetaAnnotation" })
+		void executesWithRepeatableFieldSource(String methodName) {
+			var results = execute(methodName, String.class);
 			results.allEvents().assertThatEvents() //
 					.haveExactly(1,
 						event(test(), displayName("[1] argument=some"), finishedWithFailure(message("some")))) //
@@ -1149,9 +1155,11 @@ class ParameterizedTestIntegrationTests {
 						event(test(), displayName("[2] argument=other"), finishedWithFailure(message("other"))));
 		}
 
-		@Test
-		void executesWithRepeatableArgumentsSource() {
-			var results = execute("testWithRepeatableArgumentsSource", String.class);
+		@ParameterizedTest
+		@ValueSource(strings = { "testWithRepeatableArgumentsSource",
+				"testWithRepeatableArgumentsSourceAsMetaAnnotation" })
+		void executesWithRepeatableArgumentsSource(String methodName) {
+			var results = execute(methodName, String.class);
 			results.allEvents().assertThatEvents() //
 					.haveExactly(1, event(test(), displayName("[1] argument=foo"), finishedWithFailure(message("foo")))) //
 					.haveExactly(1, event(test(), displayName("[2] argument=bar"), finishedWithFailure(message("bar")))) //
@@ -1542,7 +1550,7 @@ class ParameterizedTestIntegrationTests {
 	static class MethodSourceTestCase {
 
 		@Target(ElementType.METHOD)
-		@Retention(RetentionPolicy.RUNTIME)
+		@Retention(RUNTIME)
 		@ParameterizedTest(name = "{arguments}")
 		@MethodSource
 		@interface MethodSourceTest {
@@ -1767,7 +1775,7 @@ class ParameterizedTestIntegrationTests {
 	static class FieldSourceTestCase {
 
 		@Target(ElementType.METHOD)
-		@Retention(RetentionPolicy.RUNTIME)
+		@Retention(RUNTIME)
 		@ParameterizedTest(name = "{arguments}")
 		@FieldSource
 		@interface FieldSourceTest {
@@ -2035,6 +2043,18 @@ class ParameterizedTestIntegrationTests {
 			fail("%s %s".formatted(column1, column2));
 		}
 
+		@CsvFileSource(resources = "two-column.csv")
+		@CsvFileSource(resources = "two-column-with-headers.csv", delimiter = '|', useHeadersInDisplayName = true, nullValues = "NIL")
+		@Retention(RUNTIME)
+		@interface TwoCsvFileSources {
+		}
+
+		@ParameterizedTest
+		@TwoCsvFileSources
+		void testWithRepeatableCsvFileSourceAsMetaAnnotation(String column1, String column2) {
+			fail("%s %s".formatted(column1, column2));
+		}
+
 		@ParameterizedTest
 		@CsvSource({ "a" })
 		@CsvSource({ "b" })
@@ -2042,10 +2062,34 @@ class ParameterizedTestIntegrationTests {
 			fail(argument);
 		}
 
+		@CsvSource({ "a" })
+		@CsvSource({ "b" })
+		@Retention(RUNTIME)
+		@interface TwoCsvSources {
+		}
+
+		@ParameterizedTest
+		@TwoCsvSources
+		void testWithRepeatableCsvSourceAsMetaAnnotation(String argument) {
+			fail(argument);
+		}
+
 		@ParameterizedTest
 		@EnumSource(SmartAction.class)
 		@EnumSource(QuickAction.class)
 		void testWithRepeatableEnumSource(Action argument) {
+			fail(argument.toString());
+		}
+
+		@EnumSource(SmartAction.class)
+		@EnumSource(QuickAction.class)
+		@Retention(RUNTIME)
+		@interface TwoEnumSources {
+		}
+
+		@ParameterizedTest
+		@TwoEnumSources
+		void testWithRepeatableEnumSourceAsMetaAnnotation(Action argument) {
 			fail(argument.toString());
 		}
 
@@ -2067,6 +2111,18 @@ class ParameterizedTestIntegrationTests {
 			fail(argument);
 		}
 
+		@MethodSource("someArgumentsMethodSource")
+		@MethodSource("otherArgumentsMethodSource")
+		@Retention(RUNTIME)
+		@interface TwoMethodSources {
+		}
+
+		@ParameterizedTest
+		@TwoMethodSources
+		void testWithRepeatableMethodSourceAsMetaAnnotation(String argument) {
+			fail(argument);
+		}
+
 		public static Stream<Arguments> someArgumentsMethodSource() {
 			return Stream.of(Arguments.of("some"));
 		}
@@ -2082,6 +2138,18 @@ class ParameterizedTestIntegrationTests {
 			fail(argument);
 		}
 
+		@FieldSource("someArgumentsContainer")
+		@FieldSource("otherArgumentsContainer")
+		@Retention(RUNTIME)
+		@interface TwoFieldSources {
+		}
+
+		@ParameterizedTest
+		@TwoFieldSources
+		void testWithRepeatableFieldSourceAsMetaAnnotation(String argument) {
+			fail(argument);
+		}
+
 		static List<String> someArgumentsContainer = List.of("some");
 		static List<String> otherArgumentsContainer = List.of("other");
 
@@ -2089,6 +2157,18 @@ class ParameterizedTestIntegrationTests {
 		@ValueSource(strings = "foo")
 		@ValueSource(strings = "bar")
 		void testWithRepeatableValueSource(String argument) {
+			fail(argument);
+		}
+
+		@ValueSource(strings = "foo")
+		@ValueSource(strings = "bar")
+		@Retention(RUNTIME)
+		@interface TwoValueSources {
+		}
+
+		@ParameterizedTest
+		@TwoValueSources
+		void testWithRepeatableValueSourceAsMetaAnnotation(String argument) {
 			fail(argument);
 		}
 
@@ -2115,6 +2195,18 @@ class ParameterizedTestIntegrationTests {
 		@ArgumentsSource(TwoSingleStringArgumentsProvider.class)
 		@ArgumentsSource(TwoUnusedStringArgumentsProvider.class)
 		void testWithRepeatableArgumentsSource(String argument) {
+			fail(argument);
+		}
+
+		@ArgumentsSource(TwoSingleStringArgumentsProvider.class)
+		@ArgumentsSource(TwoUnusedStringArgumentsProvider.class)
+		@Retention(RUNTIME)
+		@interface TwoArgumentsSources {
+		}
+
+		@ParameterizedTest
+		@TwoArgumentsSources
+		void testWithRepeatableArgumentsSourceAsMetaAnnotation(String argument) {
 			fail(argument);
 		}
 	}
